Added a list of programmers

--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
 </head>
 <body>
  <p> Intro to git</p>
+
+ <ul>
+ 	<li>david</li>
+ 	<li>seif</li>
+ 	<li>kibinda</li>
+ 	<li>bton</li>
+
+ </ul>
 </body>
 </html>
